chore: rename project from ezpl to ezplog in pyproject.toml
- Updated project name in pyproject.toml to reflect the new branding.
- Maintained version and description for consistency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ezpl"
+name = "ezplog"
 version = "1.2.0"
 description = "Modern Python logging framework with Rich console output and loguru file logging, featuring advanced display capabilities, configuration management, and a simple typed API."
 readme = "README.md"
